...
            </Pressable>
          )}
        />

        {/* Shop by Category */}
        <Section
          title="Shop by Category"
          onSeeAll={() => navigation.navigate('Main', { screen: 'CategoriesTab' })}
        >
          <FlatList
            data={data.categories}
            horizontal
            showsHorizontalScrollIndicator={false}
...
